--- a/src/app/link-image/link-image.component.scss
+++ b/src/app/link-image/link-image.component.scss
@@ -13,17 +13,15 @@
     color: #8d72e1;
     text-decoration: none;
     font-size: 1.2rem;
-    border-radius: 20px;
     transition: all 0.2s ease-in-out;
     &:hover {
         background: #8d72e1;
         color: #fff;
     }
     padding: 10px 20px;
-}
-
-@media only screen and (hover: none) and (pointer: coarse) {
-    .link-image {
-        background: transparent;
-    }
+    border-radius: 8px;
+    border: 6px solid transparent;
+    border-image: url("../../assets/images/border.png") 100 round;
+    border-image-width: 6px;
+    border-image-outset: 3px;
 }
