--- a/src/app/project-card/project-card.component.html
+++ b/src/app/project-card/project-card.component.html
@@ -1,8 +1,8 @@
 <div class="project">
     <div class="card" [ngClass]="project.visible == true ? 'move-left' : 'move-right'" style="border-image: url('./assets/images/border.png') 100 round;    border-image-width: 20px;
         border-image-outset: 10px;">
-        <div class=" title">
-            <a routerLink="/projects/{{project.id}}">
+        <div class="title">
+            <a routerLink="/projects/{{project.id}}" id="title-project">
                 {{project.name}}
             </a>
         </div>
@@ -10,12 +10,8 @@
             <a routerLink="/projects/{{project.id}}">
                 <div class="text">
                     <div class="tools">
-                        <p>Tools</p>
-                        <ul>
-                            <li *ngFor="let tool of project.tools" class="tool">{{tool}}</li>
-                        </ul>
+                        <p *ngFor="let tool of project.tools" class="tool">- {{tool}}</p>
                     </div>
-
                 </div>
                 <div class="image">
                     <img [src]="project.image" [alt]="project.name + ' image'">
@@ -23,15 +19,14 @@
             </a>
         </div>
     </div>
-    <div class="footer" [ngClass]="project.visible == true ? 'rotate' : ''" style="border-image: url('./assets/images/border.png') 100 round;    border-image-width: 10px;
-        border-image-outset: 5px;">
+    <div class="footer">
         <div class="url-git">
             <app-link-image [href]="project.urlGit" [image]="'assets/images/github.png'" [alt]="'GitHub'">
                 [router]="false">
             </app-link-image>
         </div>
         <div class="url-project" *ngIf="project.urlProject != ''">
-            <app-link-image [href]="project.urlProject" [image]="'assets/images/link.png'" [alt]="'Website'"
+            <app-link-image [href]="project.urlProject" [image]="'assets/images/link.png'" [alt]="typeProject"
                 [router]="false">
             </app-link-image>
         </div>
