--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,10 @@
 body {
-    background-color: #4edad3;
     height: 100vh;
     width: 100vw;
     margin: 0;
     padding: 0;
     overflow-x: hidden;
+    background-color: rgb(135, 189, 234);
 }
 @font-face {
     font-family: "Monocraft";
@@ -17,7 +17,7 @@ body {
 
 a {
     text-decoration: none;
-    color: #333;
+    color: rgb(67, 66, 66);
     display: block;
     position: relative;
     overflow: hidden;
