fixing css problems + finished new projects page

--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -45,7 +45,7 @@
     #description {
         font-size: 1.5rem;
         font-weight: 600;
-        color: #333;
+        color: rgb(22, 22, 22);
         width: 35vw;
         text-align: center;
         margin-top: 3rem;
