--- a/src/app/single-project-card/single-project-card.component.scss
+++ b/src/app/single-project-card/single-project-card.component.scss
@@ -21,6 +21,7 @@
         -moz-background-clip: text;
         -moz-text-fill-color: transparent;
     }
+    margin-top: 3rem;
 
     &__description {
         font-size: 2rem;
