--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -14,7 +14,7 @@
     }
     background-color: rgb(255, 255, 255, 0.4);
     border-bottom: 1px solid #000;
-    margin-bottom: 3rem;
+    // margin-bottom: 3rem;
 }
 
 @media (max-width: 800px) {
