--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -3,8 +3,20 @@
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 1rem;
     margin-top: 1rem;
+    animation: appear 1s ease-in-out;
 }
 
 .background--custom {
     opacity: 0;
+}
+
+@keyframes appear {
+    0% {
+        opacity: 0;
+        transform: translateY(1000px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
