--- a/src/app/project-card/project-card.component.scss
+++ b/src/app/project-card/project-card.component.scss
@@ -1,14 +1,14 @@
 .image {
     display: inline-block;
     overflow: hidden;
-    border: 9px solid transparent;
+    border: 15px solid transparent;
     border-image: url(../../assets/images/border.png) 100 round;
-    border-image-width: 15px;
-    border-image-outset: 3px;
+    border-image-width: 19px;
+    border-image-outset: 0px;
     position: relative;
     img{
-        width: 30vw;
-        height: 20vw;
+        width: 100%;
+        height: 25rem;
         object-fit: cover;
         transition: all 0.3s ease-in-out;
     }
@@ -18,7 +18,7 @@
         left: 2%;
         position:absolute;
         text-align:center;
-        top: 26%;
+        top: 30%;
         width: 98%;
         transition: all 0.3s ease-in-out;
         font-size: 2.5rem;
@@ -30,7 +30,7 @@
     &:hover{
         img{
             transform: scale(1.1);
-            filter: brightness(0.4);
+            filter: brightness(0.3);
         }
         #title{
             opacity: 1;
