--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,3 +1,5 @@
-<div class="projects">
-    <app-project-card *ngFor="let project of projects" [project]="project"></app-project-card>
+<div class="container">
+    <div class="projects">
+        <app-project-card *ngFor="let project of projects" [project]="project"></app-project-card>
+    </div>
 </div>
