--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -2,9 +2,29 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 1rem;
-    margin-top: 1rem;
+    margin-top: 7rem;
+    margin-bottom: 7rem;
+    width: 90%;
+}
+
+.container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .background--custom {
     opacity: 0;
+}
+
+@media only screen and (max-width: 1500px) {
+    .projects {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media only screen and (max-width: 850px) {
+    .projects {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
