--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -7,9 +7,13 @@ body {
     justify-content: center;
     align-items: center;
     margin: 0 auto;
-    height: 100%;
     background: rgb(141, 114, 225, 0);
     border-radius: 20px;
+    width: 100%;
+    height: 95%;
+    position: absolute;
+    top: 5%;
+    left: 0;
     a {
         color: #000;
         text-decoration: none;
@@ -32,6 +36,7 @@ body {
             border-radius: 50px;
             p {
                 color: #fff;
+                transition: color 0.2s ease-in-out;
             }
             transition: background 0.2s ease-in-out;
             img {
