--- a/src/app/project-card/project-card.component.scss
+++ b/src/app/project-card/project-card.component.scss
@@ -18,10 +18,11 @@
         left: 2%;
         position:absolute;
         text-align:center;
-        top: 30%;
+        top: 26%;
         width: 98%;
         transition: all 0.3s ease-in-out;
         font-size: 2.5rem;
+        font-weight: bold;
         color : #fff;
         user-select: none;
     }
@@ -43,5 +44,18 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+@media only screen and (hover: none) and (pointer: coarse){
+    .image{
+        img{
+            transform: scale(1.1);
+            filter: brightness(0.5);
+        }
+        #title{
+            opacity: 1;
+            top: 23%;
+        }
+    }
 }
 
