--- a/src/app/single-project-card/single-project-card.component.scss
+++ b/src/app/single-project-card/single-project-card.component.scss
@@ -21,14 +21,13 @@
         -moz-background-clip: text;
         -moz-text-fill-color: transparent;
     }
-    margin-top: 3rem;
 
     &__description {
-        font-size: 2rem;
+        font-size: 1.5rem;
         font-weight: 600;
         padding: 0 1%;
         color: #000;
-        width: 65%;
+        width: 50%;
         text-align: center;
         margin-top: 3rem;
         background: #fff;
@@ -45,7 +44,7 @@
         margin: 10px;
         margin-bottom: 50px;
         img {
-            width: 65%;
+            width: 80%;
             margin: 0 auto;
         }
         //center the image
@@ -60,6 +59,7 @@
         justify-content: space-between;
         align-items: center;
         gap: 5rem;
+        margin-bottom: 3rem;
     }
 
     h2 {
@@ -67,10 +67,10 @@
     }
 
     &__purpose {
-        font-size: 2rem;
+        font-size: 1.5rem;
         font-weight: 600;
         color: #000;
-        width: 65%;
+        width: 50%;
         padding: 0 1%;
         text-align: center;
         margin-top: 3rem;
@@ -88,7 +88,7 @@
         flex-direction: column;
         justify-content: space-between;
         h2 {
-            font-size: 3rem;
+            font-size: 2.5rem;
             padding: 5%;
             background: #fff;
             border-radius: 20px;
@@ -118,32 +118,7 @@
     }
 }
 
-@media (max-width: 1100px) {
-    .project {
-        &__links {
-            flex-direction: column;
-            gap: 20px;
-        }
-        &__tools {
-            h3 {
-                font-size: 5vw;
-            }
-            .tool {
-                img {
-                    height: 7vw;
-                }
-            }
-        }
-    }
-}
-
-@media (max-width: 600px) {
-    h2 {
-        font-size: 2rem;
-    }
-}
-
-@media only screen and (hover: none) and (pointer: coarse) {
+@media (max-width: 800px) {
     .project {
         h2 {
             font-size: 1.75rem;
@@ -154,6 +129,7 @@
         &__tools {
             flex-direction: column;
             align-items: center;
+            gap: 1.5rem;
             h3 {
                 display: none;
             }
@@ -169,15 +145,35 @@
         }
         &__description {
             width: 65%;
+            font-size: 1.5em;
         }
         &__purpose {
             width: 65%;
+            font-size: 1.5em;
         }
         &__title {
             font-size: 2em;
         }
         &__links {
             align-items: center;
+            flex-direction: column;
+            gap: 1.5rem;
+        }
+
+        &__image {
+            img {
+                width: 65%;
+            }
         }
     }
+}
+
+@media (max-width: 600px) {
+    h2 {
+        font-size: 2rem;
+    }
+}
+
+@media only screen and (hover: none) and (pointer: coarse) {
+    
 }
