--- a/src/app/single-project-card/single-project-card.component.scss
+++ b/src/app/single-project-card/single-project-card.component.scss
@@ -10,8 +10,8 @@
         background: linear-gradient(
             90deg,
             #5435b3 0%,
-            rgb(7, 78, 111) 51%,
-            rgb(0, 0, 0) 100%
+            rgba(9, 85, 121, 1) 51%,
+            rgba(0, 212, 255, 1) 100%
         );
         background-size: 100%;
         background-repeat: repeat;
