--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,7 +1,6 @@
 <div class="desc-container">
     <p id="description">
-        As a student developer, I am highly skilled in a variety of programming languages, including HTML/CSS, Python,
-        JavaScript, Java, and C. I am also proficient in using Git and SQL/PL SQL. I am a dedicated and hardworking
+        As a student developer, I am skilled in a variety of programming languages, including the languages, frameworks and tools right below. I am also proficient in using Git and SQL/PL SQL. I am a dedicated and hardworking
         individual who is always looking to improve my skills and learn new technologies. I am seeking an internship for at leat 2 months, starting from April 2023 to June 2023,
         where I can gain valuable experience and work on challenging projects. Thank you for considering me for your
         internship program.
