--- a/src/app/project-card/project-card.component.html
+++ b/src/app/project-card/project-card.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <a [routerLink]="['/projects', project.id]">
+    <a [routerLink]="['/projects', project.id]" [id]="'project-'+project.id">
         <div class="image">
             <img id="logo" [src]="project.image" [alt]="project.name + ' image'">
             <p id="title">{{project.name}}</p>
