adding style to competences flex + single ocmpetence

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,6 +3,6 @@
     <a routerLink="/projects" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"
         class="link">Projects</a>
     <a routerLink="/about" routerLinkActive="active" class="link">About</a>
-    <a routerLink="/skills" routerLinkActive="active" class="link">Compétences PPP</a>
+    <a routerLink="/skills" routerLinkActive="active" class="link">Compétences</a>
     <a routerLink="/contact" routerLinkActive="active" class="link">Contact</a>
 </div>
