--- a/src/app/skill/skill.component.html
+++ b/src/app/skill/skill.component.html
@@ -22,4 +22,18 @@
             </div>
         </div>
     </div>
+    <div class="projets">
+        <h2>Projets reliés</h2>
+        <div class="projets__list">
+            <div *ngFor="let level of skill.levels">
+                <div class="projet" *ngFor="let projet of level.projects">
+                    <a routerLink="/projects/{{projet}}">
+                        <div class="projet__title">
+                            <h2>{{projet}}</h2>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
