--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -1,10 +1,9 @@
 .skill{
     margin: 10px;
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 2px solid gray;
     border-radius: 5px;
     background-color: #eee;
-    // width: 25%;
     height: auto;
     display: flex;
     flex-direction: column;
