appearing skills on phone

--- a/src/app/go-up/go-up.component.scss
+++ b/src/app/go-up/go-up.component.scss
@@ -36,10 +36,8 @@
 }
 
 @media only screen and (hover: none) and (pointer: coarse) {
-    .bottom-right {
-        &:hover {
-            animation: none;
-        }
+    #go-up{
+        display: none;
     }
 }
 
