--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -3,11 +3,10 @@
     display: grid;
     //two columnms
     grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
-    gap: 2rem;
+    gap: 1rem;
     margin: 0 auto;
     width: 45%;
     justify-items: center;
-    // width: 100%;
     margin: 0 auto;
     h3 {
         font-size: 1.5rem;
@@ -32,19 +31,17 @@ h1 {
     justify-content: flex-end;
     align-items: center;
     width: 90%;
-    gap: 4rem;
     img {
         height: 3vw;
     }
     ul {
         margin: 0;
-        // padding: 5px;
         text-align: center;
         li {
             font-size: 4rem;
         }
     }
-    margin-bottom: 2.5rem;
+    margin-bottom: 1.5rem;
     &:nth-child(even) {
         justify-content: flex-start;
     }
@@ -105,7 +102,6 @@ h1 {
     display: flex;
     align-items: center;
     justify-content: center;
-
     width: 100%;
 }
 
@@ -140,6 +136,14 @@ h1 {
 @media only screen and (hover: none) and (pointer: coarse) {
     .title-size {
         font-size: 2rem;
+    }
+
+    #description {
+        width: 75%;
+        font-size: 1rem;
+        padding: 5px;
+        border-image-width: 8px;
+        border-image-outset: 2px;
     }
 }
 
