github link on landing page + border on description + redo go back arrow in single project

--- a/src/app/go-up/go-up.component.html
+++ b/src/app/go-up/go-up.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="showGoUp">
     <a (click)="onActivate($event)" id="go-up">
         <div class="bottom-right">
-            <img src="assets/images/arrow.png" alt="Go up" id="logo">
+            <img src="assets/images/arrow.png" alt="Go up" class="logo">
         </div>
     </a>
 </div>
