--- a/src/app/single-project-card/single-project-card.component.scss
+++ b/src/app/single-project-card/single-project-card.component.scss
@@ -7,11 +7,10 @@
         font-weight: 600;
         background: rgb(141, 114, 225);
         text-align: center;
-        background: linear-gradient(
-            90deg,
-            #5435b3 0%,
-            rgba(9, 85, 121, 1) 51%,
-            rgba(0, 212, 255, 1) 100%
+        background: linear-gradient(90deg,
+            rgba(131,58,180,1) 0%,
+            rgba(253,29,29,1) 50%,
+            rgba(252,176,69,1) 100%
         );
         background-size: 100%;
         background-repeat: repeat;
@@ -51,6 +50,23 @@
         display: flex;
         justify-content: center;
         align-items: center;
+    }
+
+    &__back{
+        position: absolute;
+        top: 10%;
+        left: 0;
+        margin: 30px;
+        .go-back {
+            width: 100px;
+            height: 100px;
+            transform: rotate(270deg);
+        }
+        
+        &:hover{
+            cursor: pointer;
+            animation: bounce 0.5s ease-in-out infinite;
+        }
     }
 
     &__links {
@@ -115,6 +131,18 @@
     }
     h2 {
         text-align: center;
+    }
+}
+
+@keyframes bounce {
+    0% {
+        transform: translateX(0);
+    }
+    50% {
+        transform: translateX(-15px);
+    }
+    100% {
+        transform: translateX(0);
     }
 }
 
