--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,7 +1,9 @@
 <div class="container">
     <div class="header">
         <h1 class="title">Rémi JARA</h1>
-        <img src="assets/photo.png" alt="photo" id="photo">
+        <a href="https://github.com/icepick4" target="_blank">
+            <img src="assets/photo.png" alt="photo" id="photo">
+        </a>
         <p id="description">Hi, I am Rémi, french student in computer science, I am passionate about development,
             and
             I
