--- a/src/app/link-image/link-image.component.html
+++ b/src/app/link-image/link-image.component.html
@@ -1,10 +1,10 @@
 <div *ngIf="router">
     <a [routerLink]="href" class="link-image">{{alt}}
-        <img [src]="image" [alt]="alt" id="logo">
+        <img [src]="image" [alt]="alt" class="logo">
     </a>
 </div>
 <div *ngIf="!router">
     <a [href]="href" target="_blank" class="link-image">{{alt}}
-        <img [src]="image" [alt]="alt" id="logo">
+        <img [src]="image" [alt]="alt" class="logo">
     </a>
 </div>
