fix on arrows + title color single project + arrow on phone

--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -7,9 +7,10 @@ body {
     justify-content: center;
     align-items: center;
     margin: 0 auto;
+    margin-top: 7rem;
+    margin-bottom: 7rem;
     background: rgb(141, 114, 225, 0);
     border-radius: 20px;
-    height: 100%;
     a {
         color: #000;
         text-decoration: none;
