adding projects linked with skills

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -12,7 +12,9 @@
     <div class="content">
         <app-button [text]="'projects'" class="link"></app-button>
         <app-button [text]="'about'" class="link"></app-button>
+        <app-button [text]="'skills'" class="link"></app-button>
         <app-button [text]="'contact'" class="link"></app-button>
+
     </div>
 </div>
 <div *ngIf="!mobile">
