--- a/src/app/skill/skill.component.html
+++ b/src/app/skill/skill.component.html
@@ -1,4 +1,8 @@
+
 <div class="competence">
+    <a routerLink="/skills" routerLinkActive="active" class="competence__back">
+        <img src="assets/images/arrow.png" alt="Go back" class="logo go-back">
+    </a>
     <h1 id="title">
         {{skill.title}}
     </h1>
