--- a/src/app/skill/skill.component.scss
+++ b/src/app/skill/skill.component.scss
@@ -5,6 +5,22 @@
     align-items: center;
     flex-direction: column;
 
+    &__back{
+        position: absolute;
+        top: 7%;
+        left: 0;
+        margin: 42px;
+        .go-back {
+            width: 125px;
+            height: 125px;
+            transform: rotate(270deg);
+        }
+        &:hover{
+            cursor: pointer;
+            animation: bounce-horizontal 0.5s ease-in-out infinite;
+        }
+    }
+
     #title {
         font-size: 2.5em;
         font-weight: bold;
@@ -106,5 +122,17 @@
                 transform: scale(1.075);
             }
         }
+    }
+}
+
+@keyframes bounce-horizontal {
+    0% {
+        transform: translateX(0);
+    }
+    50% {
+        transform: translateX(-15px);
+    }
+    100% {
+        transform: translateX(0);
     }
 }
