--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -12,6 +12,7 @@
     text-align: center;
     height: 20%;
     width: 75%;
+    gap: 0.5rem;
     .link {
         font-size: 4rem;
         font-weight: 600;
@@ -46,7 +47,7 @@
         font-size: 1.5rem;
         font-weight: 600;
         color: rgb(22, 22, 22);
-        width: 35vw;
+        width: 25vw;
         text-align: center;
         margin-top: 3rem;
         padding: 15px;
@@ -65,6 +66,7 @@
     align-items: center;
     justify-content: space-evenly;
     height: 100%;
+    gap: 1rem;
 }
 
 .container {
@@ -101,6 +103,13 @@
     .container {
         overflow: scroll;
         height: auto;
+    }
+
+    .content{
+        .link{
+            font-size: 3rem;
+            text-decoration: underline;
+        }
     }
 
     #photo {
