trying adding browser rules

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -61,6 +61,7 @@ path {
     top: 0;
     left: 0;
 }
+
 @keyframes path0 {
     0% {
         transform: rotate(-75deg);
@@ -69,6 +70,23 @@ path {
         transform: rotate(75deg);
     }
 }
+@-moz-keyframes path0 {
+    0% {
+        transform: rotate(-75deg);
+    }
+    100% {
+        transform: rotate(75deg);
+    }
+}
+@-webkit-keyframes path0 {
+    0% {
+        transform: rotate(-75deg);
+    }
+    100% {
+        transform: rotate(75deg);
+    }
+}
+
 @keyframes path1 {
     0% {
         transform: rotate(35deg);
@@ -77,6 +95,23 @@ path {
         transform: rotate(-35deg);
     }
 }
+@-moz-keyframes path1 {
+    0% {
+        transform: rotate(35deg);
+    }
+    100% {
+        transform: rotate(-35deg);
+    }
+}
+@-webkit-keyframes path1 {
+    0% {
+        transform: rotate(35deg);
+    }
+    100% {
+        transform: rotate(-35deg);
+    }
+}
+
 @keyframes path2 {
     0% {
         transform: rotate(-10deg);
@@ -85,7 +120,40 @@ path {
         transform: rotate(10deg);
     }
 }
+@-moz-keyframes path2 {
+    0% {
+        transform: rotate(-10deg);
+    }
+    100% {
+        transform: rotate(10deg);
+    }
+}
+@-webkit-keyframes path2 {
+    0% {
+        transform: rotate(-10deg);
+    }
+    100% {
+        transform: rotate(10deg);
+    }
+}
+
 @keyframes path3 {
+    0% {
+        transform: rotate(75deg);
+    }
+    100% {
+        transform: rotate(-75deg);
+    }
+}
+@-moz-keyframes path3 {
+    0% {
+        transform: rotate(75deg);
+    }
+    100% {
+        transform: rotate(-75deg);
+    }
+}
+@-webkit-keyframes path3 {
     0% {
         transform: rotate(75deg);
     }
