--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -15,7 +15,7 @@
         <app-button [text]="'contact'" class="link"></app-button>
     </div>
 </div>
-<div>
+<div *ngIf="!mobile">
     <svg class="background--custom" viewBox="0 0 100 100" preserveAspectRatio="none">
         <path fill="#7579E7" fill-opacity="0.5" d="M-100 -100L200 -100L200 80L-100 80Z"
             style="animation: path0 8.771929824561402s linear infinite alternate;" />
@@ -26,4 +26,8 @@
         <path fill="#7868E6" fill-opacity="0.5" d="M-100 -100L200 -100L200 30L-100 30Z"
             style="animation: path3 9.803921568627452s linear infinite alternate;" />
     </svg>
+</div>
+
+<div *ngIf="mobile">
+    <div class="background--custom"></div>
 </div>
