--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -47,7 +47,7 @@
         font-size: 1.5rem;
         font-weight: 600;
         color: rgb(22, 22, 22);
-        width: 25vw;
+        width: 50%;
         text-align: center;
         margin-top: 3rem;
         padding: 15px;
