--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,25 @@
 body {
-    height: 100vh;
+    overflow-x: hidden;
+    background: linear-gradient(90deg, #4d96eb,#89bdf8, #918bec, #956df3);
+    background-size: 300% 300%;
+    animation: gradient 7s alternate infinite;
+    top: 0;
+    left: 0;
     margin: 0;
     padding: 0;
-    overflow-x: hidden;
-    background-color: rgb(135, 189, 234);
+    height: 100vh;
+    width: 100vw;
 }
+
+@keyframes gradient {
+    0% {
+        background-position: 0%;
+    }
+    100% {
+        background-position: 100%;
+    }
+}
+
 @font-face {
     font-family: "Monocraft";
     src: url("assets/fonts/Monocraft.otf");
@@ -116,25 +131,5 @@ path {
 
     path {
         transform-origin: 100% 100%;
-    }
-    
-    .background--custom {
-        background: linear-gradient(90deg, #69aaf6,#7bb2f0, #956df3);
-        background-size: 300% 300%;
-        animation: gradient 7s alternate infinite;
-        position: absolute;
-        top: 0;
-        left: 0;
-        height: 100vh;
-        width: 100vw;
-    }
-
-    @keyframes gradient {
-        0% {
-            background-position: 0%;
-        }
-        100% {
-            background-position: 100%;
-        }
     }
 }
