adding footer + styling it

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,6 @@
 </div>
 <router-outlet></router-outlet>
 <app-go-up></app-go-up>
+<div *ngIf="displayHeader">
+    <app-footer></app-footer>
+</div>
