adding legal-notices

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -41,14 +41,9 @@
                 Legal notices
             </h1>
             <div class="container">
-                <a [routerLink]="['legal-notices']">
+                <a routerLink="/legal-notices">
                     <p>
                         Legal notices
-                    </p>
-                </a>
-                <a [routerLink]="['privacy-policy']">
-                    <p>
-                        Privacy policy
                     </p>
                 </a>
             </div>
