--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,5 +1,5 @@
 .footer{
-    background-color: #f5f5f5;
+    background-color: rgb(255, 255, 255, 0.4);
     text-align: center;
     color: #777;
     font-size: 12px;
@@ -7,7 +7,9 @@
     height: auto;
     display: flex;
     flex-direction: column;
+    border-top: 1px solid #000;
     .bottom-infos{
+        width: 100%;
         border-top: 1px solid #000;
         p{
             margin: 0;
@@ -16,7 +18,6 @@
     }
     .top-infos{
         padding: 25px 0;
-        border-top: 1px solid #000;
         display: flex;
         justify-content: space-evenly;
         align-items: flex-start;
@@ -43,5 +44,15 @@
     p{
         color: rgb(63, 62, 62);
         font-size: 14px;
+    }
+}
+
+@media (max-width: 800px){
+    .footer{
+        align-items: center;
+        .top-infos{
+            flex-direction: column;
+            gap: 2rem;
+        }
     }
 }
