--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,8 +7,8 @@ body {
     left: 0;
     margin: 0;
     padding: 0;
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
 }
 
 @keyframes gradient {
