--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -33,6 +33,9 @@ h1 {
     width: 90%;
     img {
         height: 3vw;
+        &:hover{
+            cursor: pointer;
+        }
     }
     ul {
         margin: 0;
