--- a/src/app/legal-notices/legal-notices.component.scss
+++ b/src/app/legal-notices/legal-notices.component.scss
@@ -4,6 +4,21 @@
     align-items: flex-start;
     margin-left: 10%;
     margin-right: 10%;
-    height: 100%;
-    gap: 1.5rem;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    height: auto;
+    gap: 4rem;
+    h1{
+        font-size: 2.75rem;
+        margin: 0;
+    }
+}
+
+@media (max-width: 800px){
+    .content{
+        margin: 5%;
+        h1{
+            font-size: 2rem;
+        }
+    }
 }
