adding button to download my resume in contact page

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -12,6 +12,12 @@
                 <p>GitHub</p>
             </div>
         </a>
+        <a href="https://raw.githubusercontent.com/icepick4/portfolio/main/src/assets/CV-2023-remi-jara.pdf" target="_blank">
+            <div class="link-content">
+                <img src="assets/images/cv.png" alt="CV" class="logo">
+                <p>Download my resume</p>
+            </div>
+        </a>
         <a href="mailto: remi.jara4@gmail.com" target="_blank">
             <div class="link-content">
                 <img src="assets/images/email.png" alt="Email" class="logo">
